correct mistakes in exercise

--- a/FOL/exercises/cap3-ex4.ipynb
+++ b/FOL/exercises/cap3-ex4.ipynb
@@ -62,7 +62,7 @@
     "editable": true
    },
    "source": [
-    "**A1**: $Truth\\_teller(henri) \\vee Truth\\_teller(pierre)$"
+    "**A1**: $ (Truth\\_teller(henri) \\wedge \\neg Truth\\_teller(pierre)) \\vee ( \\neg Truth\\_teller(henri) \\wedge Truth\\_teller(pierre))$"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "editable": true
    },
    "source": [
-    "**A2**: $\\forall x. \\forall q. dit\\_oui(x,q) \\equiv [Truth\\_teller(x) \\wedge True(q)] \\vee [\\neg Truth\\_teller(x) \\wedge \\neg True(q)]$"
+    "**A2**: $\\forall x. \\forall q. Answer\\_yes(x,q) \\equiv [Truth\\_teller(x) \\wedge True(q)] \\vee [\\neg Truth\\_teller(x) \\wedge \\neg True(q)]$"
    ]
   },
   {
@@ -129,7 +129,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### exhaustive proof:"
    ]
@@ -145,7 +148,7 @@
     "\n",
     "    - $ Go\\_left \\wedge Truth\\_teller(pierre) \\implies Answer\\_yes(pierre, gauche) $\n",
     "    \n",
-    "    - $ Truth\\_teller(pierre) \\implies \\neg Truth\\_teller(henri) $\n",
+    "    - $ Truth\\_teller(pierre) \\implies \\neg Truth\\_teller(henri) $, from **A1**.\n",
     "    \n",
     "    - $ \\neg Truth\\_teller(henri) \\wedge Answer\\_yes(pierre, gauche) \\implies Answer\\_yes(henri, dit\\_non(pierre, gauche))) \\equiv Answer\\_yes(henri, t)$\n",
     "    \n",
@@ -228,13 +231,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "to show that the KB does not entail which direction, one only needs to show two interpretations $\\Im_1$ and $\\Im_2$ which both satisfy the KB below, but whose values of $Go\\_left$ differ.\n",
     "\n",
-    "**A1**: $Truth\\_teller(henri) \\vee Truth\\_teller(pierre)$ [or should it be $ (Truth\\_teller(henri) \\wedge \\neg Truth\\_teller(pierre)) \\vee ( \\neg Truth\\_teller(henri) \\wedge Truth\\_teller(pierre))$?]\n",
+    "**A1**: $ (Truth\\_teller(henri) \\wedge \\neg Truth\\_teller(pierre)) \\vee ( \\neg Truth\\_teller(henri) \\wedge Truth\\_teller(pierre))$\n",
     "\n",
-    "**A2**: $\\forall x. \\forall q. dit\\_oui(x,q) \\equiv [Truth\\_teller(x) \\wedge True(q)] \\vee [\\neg Truth\\_teller(x) \\wedge \\neg True(q)]$\n",
+    "**A2**: $\\forall x. \\forall q. Answer\\_yes(x,q) \\equiv [Truth\\_teller(x) \\wedge True(q)] \\vee [\\neg Truth\\_teller(x) \\wedge \\neg True(q)]$\n",
     "\n",
     "**A3**: $\\forall x. Answer\\_yes(x, gauche) \\wedge True(gauche) \\equiv Go\\_left $\n",
     "\n",
@@ -245,9 +251,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "let $\\Im_1$ be:\n",
+    "let $\\Im_1$ be an interpretation that satisfies the KB and:\n",
     "\n",
     "* $\\Im_1 \\models Truth\\_teller(henri)$\n",
     "\n",
@@ -264,9 +273,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "let $\\Im_2$ be:\n",
+    "let $\\Im_2$ be an interpretation that satisfies the KB and:\n",
     "\n",
     "* $\\Im_2 \\models Truth\\_teller(pierre)$\n",
     "\n",
@@ -277,6 +289,13 @@
     "    the same holds for **A2**, **A4-5**.\n",
     "    \n",
     "therefore $\\Im_2$ satisfies the KB."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "as both $\\Im_1$ and $\\Im_2$ satisfy the KB and in only one of them $Go\\_left$ is true, it follows that the KB does not entail which direction to go."
    ]
   }
  ],
@@ -296,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
