correct remaining mistakes in notebook, correct tptp problem file

--- a/FOL/exercises/cap3-ex4.ipynb
+++ b/FOL/exercises/cap3-ex4.ipynb
@@ -62,46 +62,14 @@
     "editable": true
    },
    "source": [
-    "**A1**: $ (Truth\\_teller(henri) \\wedge \\neg Truth\\_teller(pierre)) \\vee ( \\neg Truth\\_teller(henri) \\wedge Truth\\_teller(pierre))$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "**A2**: $\\forall x. \\forall q. Answer\\_yes(x,q) \\equiv [Truth\\_teller(x) \\wedge True(q)] \\vee [\\neg Truth\\_teller(x) \\wedge \\neg True(q)]$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "**A3**: $\\forall x. Answer\\_yes(x, gauche) \\wedge True(gauche) \\equiv Go\\_left $"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "**A4**: $\\forall x. \\forall q. True(dit\\_oui(x,q)) \\equiv Answer\\_yes(x,q)$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
+    "**A1**: $ (Truth\\_teller(henri) \\wedge \\neg Truth\\_teller(pierre)) \\vee ( \\neg Truth\\_teller(henri) \\wedge Truth\\_teller(pierre))$\n",
+    "\n",
+    "**A2**: $\\forall x. \\forall q. Answer\\_yes(x,q) \\equiv [Truth\\_teller(x) \\wedge True(q)] \\vee [\\neg Truth\\_teller(x) \\wedge \\neg True(q)]$\n",
+    "\n",
+    "**A3**: $ True(gauche) \\equiv Go\\_left $\n",
+    "\n",
+    "**A4**: $\\forall x. \\forall q. True(dit\\_oui(x,q)) \\equiv Answer\\_yes(x,q)$\n",
+    "\n",
     "**A5**: $ \\forall x. \\forall q. True(dit\\_non(x,q)) \\equiv \\neg Answer\\_yes(x, q)$"
    ]
   },
@@ -146,13 +114,19 @@
    "source": [
     "* suppose $ Go\\_left \\wedge Truth\\_teller(pierre) $ holds. then,\n",
     "\n",
-    "    - $ Go\\_left \\wedge Truth\\_teller(pierre) \\implies Answer\\_yes(pierre, gauche) $\n",
+    "    - $ Go\\_left \\implies True(gauche)$, from **A3**.\n",
+    "    \n",
+    "    - $ True(gauche) \\wedge Truth\\_teller(pierre) \\implies Answer\\_yes(pierre, gauche) $, from **A2**.\n",
     "    \n",
     "    - $ Truth\\_teller(pierre) \\implies \\neg Truth\\_teller(henri) $, from **A1**.\n",
     "    \n",
-    "    - $ \\neg Truth\\_teller(henri) \\wedge Answer\\_yes(pierre, gauche) \\implies Answer\\_yes(henri, dit\\_non(pierre, gauche))) \\equiv Answer\\_yes(henri, t)$\n",
+    "    - $ Answer\\_yes(pierre, gauche) \\implies \\neg True(dit\\_non(pierre, gauche)) $, from **A5**.\n",
     "    \n",
-    "    so $ Go\\_left \\wedge Truth\\_teller(pierre) \\implies Answer\\_yes(henri, t) $."
+    "    - $ \\neg Truth\\_teller(henri) \\wedge \\neg True(dit\\_non(pierre, gauche)) \\implies Answer\\_yes(henri, dit\\_non(pierre, gauche))) $, from **A2**.\n",
+    "    \n",
+    "    but $ Answer\\_yes(henri, dit\\_non(pierre, gauche))) \\equiv Answer\\_yes(henri, t) $, so:\n",
+    "    \n",
+    "    **T1**: $\\ Go\\_left \\wedge Truth\\_teller(pierre) \\implies Answer\\_yes(henri, t) $"
    ]
   },
   {
@@ -163,14 +137,20 @@
    },
    "source": [
     "* suppose $ \\neg Go\\_left \\wedge Truth\\_teller(pierre) $ holds. then,\n",
+    "    \n",
+    "    - $ \\neg Go\\_left \\implies \\neg True(gauche) $, from **A3**.\n",
     "\n",
-    "    - $ \\neg Go\\_left \\wedge Truth\\_teller(pierre) \\implies \\neg Answer\\_yes(pierre, gauche) $\n",
+    "    - $ \\neg True(gauche) \\wedge Truth\\_teller(pierre) \\implies \\neg Answer\\_yes(pierre, gauche) $, from **A2**.\n",
     "    \n",
     "    - $ Truth\\_teller(pierre) \\implies \\neg Truth\\_teller(henri) $, from **A1**.\n",
     "    \n",
-    "    - $ \\neg Truth\\_teller(henri) \\wedge \\neg Answer\\_yes(pierre, gauche) \\implies \\neg Answer\\_yes(henri, dit\\_non(pierre, gauche))) \\equiv \\neg Answer\\_yes(henri, t)$\n",
+    "    - $ \\neg Answer\\_yes(pierre, gauche) \\implies True(dit\\_non(pierre, gauche)) $, from **A5**.\n",
     "    \n",
-    "    so $ \\neg Go\\_left \\wedge Truth\\_teller(pierre) \\implies \\neg Answer\\_yes(henri, t) $."
+    "    - $ \\neg Truth\\_teller(henri) \\wedge True(dit\\_non(pierre, gauche)) \\implies \\neg Answer\\_yes(henri, dit\\_non(pierre, gauche))) $, from **A2**.\n",
+    "    \n",
+    "    but $\\neg Answer\\_yes(henri, dit\\_non(pierre, gauche))) \\equiv \\neg Answer\\_yes(henri, t)$, so:\n",
+    "    \n",
+    "    **T2**: $ \\neg Go\\_left \\wedge Truth\\_teller(pierre) \\implies \\neg Answer\\_yes(henri, t) $"
    ]
   },
   {
@@ -184,11 +164,17 @@
     "\n",
     "    - $ Truth\\_teller(henri) \\implies \\neg Truth\\_teller(pierre) $, from **A1**.\n",
     "    \n",
-    "    - $ Go\\_left \\wedge \\neg Truth\\_teller(pierre) \\implies \\neg Answer\\_yes(pierre, gauche) $\n",
+    "    - $ Go\\_left \\implies True(gauche) $, from **A3**.\n",
     "    \n",
-    "    - $ Truth\\_teller(henri) \\wedge \\neg Answer\\_yes(pierre, gauche) \\implies Answer\\_yes(henri, dit\\_non(pierre, gauche)) \\equiv Answer\\_yes(henri, t)$\n",
+    "    - $ True(gauche) \\wedge \\neg Truth\\_teller(pierre) \\implies \\neg Answer\\_yes(pierre, gauche) $, from **A2**.\n",
     "    \n",
-    "    so $ Go\\_left \\wedge Truth\\_teller(henri) \\implies Answer\\_yes(henri, t) $."
+    "    - $ \\neg Answer\\_yes(pierre, gauche) \\implies True(dit\\_non(pierre, gauche)) $, from **A5**.\n",
+    "    \n",
+    "    - $ Truth\\_teller(henri) \\wedge True(dit\\_non(pierre, gauche)) \\implies Answer\\_yes(henri, dit\\_non(pierre, gauche))  $, from **A2**.\n",
+    "    \n",
+    "    but $ Answer\\_yes(henri, dit\\_non(pierre, gauche)) \\equiv Answer\\_yes(henri, t) $, so:\n",
+    "    \n",
+    "    **T3**: $ Go\\_left \\wedge Truth\\_teller(henri) \\implies Answer\\_yes(henri, t) $"
    ]
   },
   {
@@ -202,11 +188,17 @@
     "\n",
     "    - $ Truth\\_teller(henri) \\implies \\neg Truth\\_teller(pierre) $, from **A1**.\n",
     "    \n",
-    "    - $ \\neg Go\\_left \\wedge \\neg Truth\\_teller(pierre) \\implies Answer\\_yes(pierre, gauche) $\n",
+    "    - $ \\neg Go\\_left \\implies \\neg True(gauche) $, from **A3**.\n",
     "    \n",
-    "    - $ Truth\\_teller(henri) \\wedge Answer\\_yes(pierre, gauche) \\implies \\neg Answer\\_yes(henri, dit\\_non(pierre, gauche)) \\equiv \\neg Answer\\_yes(henri, t)$\n",
+    "    - $ \\neg True(gauche) \\wedge \\neg Truth\\_teller(pierre) \\implies Answer\\_yes(pierre, gauche) $, from **A2**.\n",
     "    \n",
-    "    so $ \\neg Go\\_left \\wedge Truth\\_teller(henri) \\implies \\neg Answer\\_yes(henri, t) $."
+    "    - $ Answer\\_yes(pierre, gauche) \\implies \\neg True(dit\\_non(x,q))$, from **A5**.\n",
+    "    \n",
+    "    - $ Truth\\_teller(henri) \\wedge \\neg True(dit\\_non(x,q)) \\implies \\neg Answer\\_yes(henri, dit\\_non(pierre, gauche)) $, from **A2**.\n",
+    "    \n",
+    "    but $ \\neg Answer\\_yes(henri, dit\\_non(pierre, gauche)) \\equiv \\neg Answer\\_yes(henri, t)$, so: \n",
+    "    \n",
+    "    **T4**: $ \\neg Go\\_left \\wedge Truth\\_teller(henri) \\implies \\neg Answer\\_yes(henri, t) $"
    ]
   },
   {
@@ -216,7 +208,9 @@
     "editable": true
    },
    "source": [
-    "therefore, $$ KB \\models [Answer\\_yes(henri, t) \\equiv Go\\_left \\ \\square $$"
+    "therefore, from **T1-4**:\n",
+    "\n",
+    "$$ KB \\models [Answer\\_yes(henri, t) \\equiv Go\\_left \\ \\square $$"
    ]
   },
   {
@@ -293,7 +287,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "as both $\\Im_1$ and $\\Im_2$ satisfy the KB and in only one of them $Go\\_left$ is true, it follows that the KB does not entail which direction to go."
    ]
